; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-i2s-mux.c_clk_i2s_mux_get_parent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/at91/extr_clk-i2s-mux.c_clk_i2s_mux_get_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.clk_i2s_mux = type { i32, i32 }

@AT91_SFR_I2SCLKSEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @clk_i2s_mux_get_parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_i2s_mux_get_parent(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.clk_i2s_mux*, align 8
  %4 = alloca i32, align 4
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %5 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %6 = call %struct.clk_i2s_mux* @to_clk_i2s_mux(%struct.clk_hw* %5)
  store %struct.clk_i2s_mux* %6, %struct.clk_i2s_mux** %3, align 8
  %7 = load %struct.clk_i2s_mux*, %struct.clk_i2s_mux** %3, align 8
  %8 = getelementptr inbounds %struct.clk_i2s_mux, %struct.clk_i2s_mux* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @AT91_SFR_I2SCLKSEL, align 4
  %11 = call i32 @regmap_read(i32 %9, i32 %10, i32* %4)
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.clk_i2s_mux*, %struct.clk_i2s_mux** %3, align 8
  %14 = getelementptr inbounds %struct.clk_i2s_mux, %struct.clk_i2s_mux* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @BIT(i32 %15)
  %17 = and i32 %12, %16
  %18 = load %struct.clk_i2s_mux*, %struct.clk_i2s_mux** %3, align 8
  %19 = getelementptr inbounds %struct.clk_i2s_mux, %struct.clk_i2s_mux* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = ashr i32 %17, %20
  ret i32 %21
}

declare dso_local %struct.clk_i2s_mux* @to_clk_i2s_mux(%struct.clk_hw*) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
